[package]
name = "acode-cli"
version = "1.0.5"
edition = "2021"
author = "coswat"
description = "Acode Plugin CLI [ MIT ]"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.10"
spinners = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "acode-cli"
path = "src/main.rs"
