[package]
name = "acode-cli"
version = "1.0.6"
edition = "2021"
author = "coswat"
description = "Acode plugin CLI tool to devlop plugins faster"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
spinners = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"]}

[[bin]]
name = "acode-cli"
path = "src/main.rs"
