[package]
name = "acode-cli"
version = "1.0.7"
edition = "2024"
authors = ["coswat"]
description = "Acode plugin CLI tool to devlop plugins faster"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
spinners = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"]}
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
strip = true
opt-level = "z"
lto = true 
codegen-units = 1

[[bin]]
name = "acode-cli"
path = "src/main.rs"
